5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1679_1105.log
== TEST (2019-04-25 17:34:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('Insira um brasao: ')
print ('Entrada:', a)

if (x==lobo):
	print('Stark')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print ('Entrada:', a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:34:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('Insira um brasao: ')
print ('Entrada:', x)

if (x==lobo):
	print('Stark')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (x==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:36:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('Insira um brasao: ')
print ('Entrada:', x)

if (x=='lobo'):
	print('Stark')
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:47:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('Insira um brasao: ').lower()
print ('Entrada:', x)

if (x=='lobo'):
	print('Casa: Stark')
elif (x=='leao'):
	print('Casa: Lannister')
elif (x=='veado'):
	print('Casa: Baratheon')
elif (x=='dragao'):
	print('Casa: Targaryen')
elif (x=='rosa'):
	print('Casa: Tyrell')
elif (x=='sol'):
	print('Casa: Martell')
elif (x=='lula'):
	print('Casa: Greyjoy')
elif (x=='esfolado'):
	print('Casa: Bolton')
elif (x=='turta'):
	print('Casa: Tully')
else:
	print('Brasao invalido')
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('Insira um brasao: ').lower()
print ('Entrada:', x)

if (x=='lobo'):
	print('Casa: Stark')
elif (x=='leao'):
	print('Casa: Lannister')
elif (x=='veado'):
	print('Casa: Baratheon')
elif (x=='dragao'):
	print('Casa: Targaryen')
elif (x=='rosa'):
	print('Casa: Tyrell')
elif (x=='sol'):
	print('Casa: Martell')
elif (x=='lula'):
	print('Casa: Greyjoy')
elif (x=='esfolado'):
	print('Casa: Bolton')
elif (x=='turta'):
	print('Casa: Tully')
else:
	print('Brasao invalido')
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('Insira um brasao: ').lower()
print ('Entrada:', x)

if (x=='lobo'):
	print('Casa: Stark')
elif (x=='leao'):
	print('Casa: Lannister')
elif (x=='veado'):
	print('Casa: Baratheon')
elif (x=='dragao'):
	print('Casa: Targaryen')
elif (x=='rosa'):
	print('Casa: Tyrell')
elif (x=='sol'):
	print('Casa: Martell')
elif (x=='lula'):
	print('Casa: Greyjoy')
elif (x=='esfolado'):
	print('Casa: Bolton')
elif (x=='turta'):
	print('Casa: Tully')
else:
	print('Brasao invalido')
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('Insira um brasao: ').lower()
print ('Entrada:', x)

if (x=='lobo'):
	print('Casa: Stark')
elif (x=='leao'):
	print('Casa: Lannister')
elif (x=='veado'):
	print('Casa: Baratheon')
elif (x=='dragao'):
	print('Casa: Targaryen')
elif (x=='rosa'):
	print('Casa: Tyrell')
elif (x=='sol'):
	print('Casa: Martell')
elif (x=='lula'):
	print('Casa: Greyjoy')
elif (x=='esfolado'):
	print('Casa: Bolton')
elif (x=='turta'):
	print('Casa: Tully')
else:
	print('Brasao invalido')
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:49:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('Insira um brasao: ').lower()
print ('Entrada:', x)

if (x=='lobo'):
	print('Casa: Stark')
elif (x=='leao'):
	print('Casa: Lannister')
elif (x=='veado'):
	print('Casa: Baratheon')
elif (x=='dragao'):
	print('Casa: Targaryen')
elif (x=='rosa'):
	print('Casa: Tyrell')
elif (x=='sol'):
	print('Casa: Martell')
elif (x=='lula'):
	print('Casa: Greyjoy')
elif (x=='esfolado'):
	print('Casa: Bolton')
elif (x=='turta'):
	print('Casa: Tully')
else:
	print('Brasao invalido')
-- EXECUTION TIME:
0.189185
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
